Fixed text alignment and window resizing

--- a/style/style.css
+++ b/style/style.css
@@ -80,9 +80,14 @@ body{
 .main-buttons{
     position: absolute;
     text-align: center;
-    top: 51%;
+    top: 160%;
     width: 100%;
     -webkit-animation-duration: 0.95s;
+}
+
+img {
+    height: 35px;
+    max-width: 100vw;  
 }
 /* ============= BUTTONS ============= */
 .btn{
